[package]
name = "openbrainfuck"
description = "The Open Source Brainfuck Interpretor and Framework"
authors = ["Zuygui <maxime@halbitte.fr>"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.12"